@@ -9,4 +9,4 @@ RDEPEND=>=app-shells/bash-4 || ( app-text/recode ( dev-lang/perl dev-perl/HTML-P
 SLOT=0
 SRC_URI=https://github.com/mcrapet/plowshare/archive/v2.1.0.tar.gz -> plowshare-2.1.0.tar.gz
 _eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=10b33cae626608902e4c547db75c2a13
+_md5_=812cc1dee5c08f6bf881fcb7a5b7c156
