@@ -1,0 +1,8 @@
+DEFINED_PHASES=-
+DESCRIPTION=Virtual to select between different udev daemon providers
+EAPI=5
+IUSE=systemd
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+RDEPEND=!systemd? ( || ( >=sys-fs/udev-217 >=sys-fs/eudev-2.1.1 ) ) systemd? ( >=sys-apps/systemd-217:0 )
+SLOT=0
+_md5_=dc1f6362735d8c3b3c3a36e6a7841369
