@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/Fiona/Fiona-1.5.1.ebuild,v 1.1 2015/04/16 05:19:08 slis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/Fiona/Fiona-1.5.1.ebuild,v 1.2 2015/04/30 15:00:24 slis Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python{2_6,2_7,3_3,3_4} )
@@ -28,6 +28,10 @@ DEPEND="${RDEPEND}
 
 src_prepare() {
 	epatch "${FILESDIR}/scriptname.patch"
+}
+
+pkg_postinst() {
+	einfo "Fiona script is installed as /usr/bin/Fiona"
 }
 
 python_test() {
