@@ -5,7 +5,7 @@
      entry_points='''
          [console_scripts]
 -        fio=fiona.fio.fio:cli
-+        fiona=fiona.fio.fio:cli
++        Fiona=fiona.fio.fio:cli
          ''',
      install_requires=requirements,
      tests_require=['nose'],
