@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/Fiona
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/Fiona/ChangeLog,v 1.9 2015/04/16 05:19:08 slis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/Fiona/ChangeLog,v 1.10 2015/04/30 15:00:24 slis Exp $
+
+  30 Apr 2015; Sławek Lis <slis@gentoo.org> Fiona-1.5.1.ebuild,
+  files/scriptname.patch:
+  Once again binary filename change (#547996)
 
 *Fiona-1.5.1 (16 Apr 2015)
 
