@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/plowshare
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/plowshare/ChangeLog,v 1.34 2015/04/14 11:55:28 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/plowshare/ChangeLog,v 1.35 2015/04/30 14:47:02 voyageur Exp $
+
+  30 Apr 2015; Bernard Cafarelli <voyageur@gentoo.org>
+  plowshare-2.1.0-r1.ebuild:
+  Fix the doc install path again
 
 *plowshare-2.1.0-r1 (14 Apr 2015)
 
